[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://combi.cs.colostate.edu/idiffir"
Repository = "https://github.com/bio-comp/iDiffIR"

[project]
name = "iDiffIR"
version = "0.3.2"
description = "Identifying differential intron retention from RNA-seq"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU General Public License" }
authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
]
dependencies = ["scipy", "numpy", "matplotlib", "pysam", "gffutils>=0.13"]


[tool.setuptools]
include-package-data = true
script-files = [
  "scripts/idiffir.py",
  "scripts/getDepths.py",
  "scripts/convertSam.py",
  "scripts/simulate_IR.py",
  "scripts/make_MISO_IR_GFF.py",
  "scripts/make_MISO_AS_GFF.py",
  "scripts/get_gene_expression.py",
  "scripts/idiffir_plotter.py",
  "scripts/run_miso_ir.py",
]

[tool.setuptools.packages.find]
include = ["iDiffIR*"]

[tool.setuptools.package-data]
iDiffIR = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
extend-select = ["ANN", "C90"]
ignore = [
  # Keep migration velocity while we incrementally reduce Any-heavy legacy paths.
  "ANN401",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[dependency-groups]
dev = ["mypy>=1.19.1", "pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.15.2", "build>=1.2"]
