[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://combi.cs.colostate.edu/idiffir"
Repository = "https://github.com/bio-comp/iDiffIR"

[project]
name = "iDiffIR"
version = "0.3.2"
description = "Identifying differential intron retention from RNA-seq"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU General Public License" }
authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "pysam",
    "gffutils>=0.13",
    "networkx>=3.4.2",
    "scikit-learn>=1.7.2",
    "skops>=0.13.0",
]

[project.scripts]
"idiffir.py" = "scripts.idiffir:main"
"idiffir_plotter.py" = "scripts.idiffir_plotter:main"
"getDepths.py" = "scripts.getDepths:main"
"convertSam.py" = "scripts.convertSam:main"
"simulate_IR.py" = "scripts.simulate_IR:main"
"make_MISO_IR_GFF.py" = "scripts.make_MISO_IR_GFF:main"
"make_MISO_AS_GFF.py" = "scripts.make_MISO_AS_GFF:main"
"make_MISO_SE_GFF.py" = "scripts.make_MISO_SE_GFF:main"
"get_gene_expression.py" = "scripts.get_gene_expression:main"
"get_intron_expression.py" = "scripts.get_intron_expression:main"
"run_miso_ir.py" = "scripts.run_miso_ir:main"
"migrate_classifier_archives.py" = "scripts.migrate_classifier_archives:main"
"train_splice_site_svm.py" = "scripts.train_splice_site_svm:main"

[tool.hatch.build.targets.wheel]
packages = ["iDiffIR", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"iDiffIR/py.typed" = "iDiffIR/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "unit: Fast, isolated unit-level tests.",
  "integration: Cross-module or IO-involving integration tests.",
  "smoke: Fast high-level behavior checks for critical paths.",
  "performance: Performance-sensitive tests intended for local or dedicated runners.",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
extend-select = ["ANN", "C90"]
ignore = [
  # Keep migration velocity while we incrementally reduce Any-heavy legacy paths.
  "ANN401",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "build>=1.2",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.3",
]
